--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Random Quote Machine</title>
 
     <link
       rel="stylesheet"
@@ -17,47 +17,70 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    /> -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section>
-      <div id="quote-box" class="">
-        <div class="text_container">
-          <h1 id="text">
-            <!-- Dynamic Text Here -->
-          </h1>
-          <p id="author">
-            <!-- Dynamic Author Name -->
-          </p>
-        </div>
+      <div>
+        <div id="quote-box" class="">
+          <div class="text_container">
+            <h1 id="text">
+              <!-- Dynamic Text Here -->
+            </h1>
+            <p id="author">
+              <!-- Dynamic Author Name -->
+            </p>
+          </div>
 
-        <div class="row">
-          <div class="col-md-6">
-            <div class="icon_container">
-              <a href="twitter.com/intent/tweet" id="tweet-quote">
-                <div class="icon_div">
-                  <i class="fa-brands fa-twitter"></i>
-                </div>
-              </a>
-              <a href="" id="tumblr-quote">
-                <div class="icon_div">
-                  <i class="fa-brands fa-tumblr"></i>
-                </div>
-              </a>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="icon_container">
+                <a href="twitter.com/intent/tweet" id="tweet-quote">
+                  <div class="icon_div">
+                    <i class="fa-brands fa-twitter"></i>
+                  </div>
+                </a>
+                <a href="" id="tumblr-quote">
+                  <div class="icon_div">
+                    <i class="fa-brands fa-tumblr"></i>
+                  </div>
+                </a>
+              </div>
             </div>
-          </div>
-          <div class="col-md-6">
-            <div class="btn_container">
-              <button class="quote_btn" id="new-quote">New Quote</button>
+            <div class="col-md-6">
+              <div class="btn_container">
+                <button class="quote_btn" id="new-quote">New Quote</button>
+              </div>
             </div>
           </div>
         </div>
+        <p
+          style="
+            text-align: center;
+            margin-top: 20px;
+            font-size: 1.5rem;
+            color: white;
+          "
+        >
+          Develop by Md. Tajuuddin Tarek
+        </p>
       </div>
     </section>
+
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"
+      integrity="sha512-VjRpiWhUqdNa9bwBV7LnlG8CwsCVPenFyOQTSRTOGHw/tjtME96zthh0Vv9Itf3i8w4CkUrdYaS6+dAt1m1YXQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     ></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="script.js"></script>
